# universal-ibs-validator

./: README.md  demo_run.py  pyproject.toml
src/universal_ibs_validator/: confidentiality.py  domain_types.py  engine.py  reporting.py
src/universal_ibs_validator/rules/: cbs.py  lbs.py
tests/: test_confidentiality.py
