[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-ibs-validator"
version = "1.0.0"
description = "A generalized validator for International Banking Statistics (LBS/CBS) data consistency."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "jinja2>=3.0.0"  # Used for generating HTML reports
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "black"]
